# mosaic-rag

./: DATASETS.md  FINDINGS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: REPORT.md  RESULTS.md
benchmarks/results/: ablation_results.json  leaderboard.json
benchmarks/results/docvqa/: ablation_results.json  leaderboard.json
docs/: api.md  benchmarks.md  index.md
scripts/: download_datasets.py
src/mosaic/: __init__.py  cli.py  pipeline.py  types.py
src/mosaic/chunking/: __init__.py  chunkers.py
src/mosaic/embeddings/: __init__.py  base.py  ollama.py  providers.py
src/mosaic/eval/: __init__.py  ablations.py  datasets.py  embedders.py  harness.py
src/mosaic/eval/loaders/: __init__.py  beir_scifact.py  docvqa.py  registry.py  types.py
src/mosaic/rerank/: __init__.py  rerankers.py
src/mosaic/retrieval/: __init__.py  retrievers.py
tests/: test_ablations.py  test_loaders.py  test_pipeline.py
web/: package-lock.json  package.json
web/public/: leaderboard.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/benchmarks/: page.tsx
web/src/app/docs/: page.tsx
web/src/components/: SiteFooter.tsx  SiteNav.tsx
