[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaic-rag"
version = "0.1.0"
description = "Multimodal retrieval engine with rigorous evaluation harness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Md. Jahidul Islam", email = "jahidbappi@users.noreply.github.com" }]
keywords = ["rag", "multimodal", "retrieval", "evaluation", "embeddings"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.9.0",
  "numpy>=1.26.0",
  "pillow>=10.0.0",
  "datasets>=3.0.0",
]

[project.urls]
Homepage = "https://mosaic-rag.vercel.app"
Documentation = "https://mosaic-rag.vercel.app/docs"
Benchmarks = "https://mosaic-rag.vercel.app/benchmarks"
Repository = "https://github.com/jahidbappi/mosaic-rag"

[project.optional-dependencies]
ml = [
  "sentence-transformers>=3.0.0",
  "torch>=2.2.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pre-commit>=3.8.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.25.0",
]

[project.scripts]
mosaic-benchmark = "mosaic.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mosaic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "slow: integration tests that download real datasets",
]
